--- a/bankproject/src/main/resources/templates/index.html
+++ b/bankproject/src/main/resources/templates/index.html
@@ -9,9 +9,10 @@
 	<link rel="stylesheet" th:href="@{/css/common/reset.css}">
 	<link rel="stylesheet" th:href="@{/css/common/all.min.css}">
 	<link rel="stylesheet" th:href="@{/css/common/fonts.css}">
-	<link rel="stylesheet" th:href="@{/css/header.css}">
+	<link rel="stylesheet" th:href="@{/css/header-footer.css}">
 	<link rel="stylesheet" th:href="@{/css/index.css}">
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
 	<!-- js -->
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/js/header.js"></script>
@@ -82,6 +83,45 @@
 				</ul>
 			</div>
 		</main>
+		<footer>
+			<div class="f-inner">
+				<div class="f-left">
+					<address>
+						<h4>고객센터</h4>
+						<span>전화 : 1588-1234 (평일 오전9시 ~ 오후 6시)</span>
+						<span>보이스피싱/사기 : 1588-5678 (24시간 연중무휴)</span>
+						<span>이메일문의 : japgaja8282@naver.com</span>
+					</address>
+					<h4>(주)패스뱅크</h4>
+					<article>
+						<div class="kim">
+							<h5>Backend : Sung Sig Kim</h5>
+							<h5>email : tjdtlr12349@gmail.com</h5>
+							<h5>Git URL : <a href="#">바로가기<span class="material-symbols-outlined">exit_to_app</span></a></h5>
+						</div>
+						<div class="park">
+							<h5>Backend : Min Kyung Park </h5>
+							<h5>email : 민경@gmail.com</h5>
+							<h5>Git URL : <a href="#">바로가기<span class="material-symbols-outlined">exit_to_app</span></a></h5>
+						</div>
+						<div class="hwang">
+							<h5>Publisher : Ji Hyun Hwang </h5>
+							<h5>email : ghkdwlgus000@gmail.com</h5>
+							<h5>Git URL : <a href="#">바로가기<span class="material-symbols-outlined">exit_to_app</span></a></h5>
+						</div>
+					</article>
+				</div>
+				<div class="f-right">
+					<ul>
+						<li><a href="#">마이페이지</a></li>
+						<li><a href="#">상품</a></li>
+						<li><a href="#">이체</a></li>
+						<li><a href="#">증권</a></li>
+					</ul>
+					<p>© copyright 2024 Example Corp.</p>
+				</div>
+			</div>
+		</footer>
 	</div>
 
 	<script>
