--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" th:href="@{/css/common/reset.css}">
     <link rel="stylesheet" th:href="@{/css/common/all.min.css}">
     <link rel="stylesheet" th:href="@{/css/common/fonts.css}">
-    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/header-footer.css}">
 	<link rel="stylesheet" th:href="@{/css/login.css}">
     <!-- js -->
     <script src="@{/js/login.js}"></script>
