--- a/bankproject/src/main/resources/static/css/admin.css
+++ b/bankproject/src/main/resources/static/css/admin.css
@@ -20,9 +20,9 @@ body {color: #eee; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-
 .admin-user > .name {font-size: 20px; font-weight: 500; line-height: 2;}
 .admin-user > .group {font-size: 14px;}
 .aside-nav {margin-bottom: 25px;}
-.aside-nav li {line-height:3; padding-left: 10px; border-radius: 10px; }
-.aside-nav li > a {display: inline-block; width: 100%;}
-.aside-nav li:hover {background: #146CEF;}
+.aside-nav li {line-height:3; padding-left: 10px; margin-bottom: 5px; border-radius: 10px; }
+.aside-nav li > a {display: inline-block; width: 100%; }
+.aside-nav li:hover {background: #0b3575;}
 .aside-nav li.active {background: #146CEF;}
 .aside-menu > a > span {display: inline-block; vertical-align: middle; margin-right: 10px;}
 .fun {margin-top: 25px; display: grid; gap: 10px; grid-template-columns: repeat(2, 1fr);}
@@ -85,7 +85,7 @@ body {color: #eee; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-
 /* 고객관리 */
 .client, .client-Clear {padding: 3px 10px; border: 1px solid #585858; background: rgba(0, 0, 0, 0.5);  border-radius: 10px; border: 1px solid #585858; color: #fff; cursor: pointer;}
 
-.open-box {display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #fff; width: 500px; height: 500px; padding: 30px; color: #555; border-radius: 20px;}
+.open-box {display: none; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background: #fff; width: 500px; height: 500px; padding: 30px; color: #555; border-radius: 20px; transition: all 0.2s;}
 .openForm > h2 {display: flex; justify-content: space-between;}
 .openForm > h2 > span {display: inline-block; font-size: 32px; cursor: pointer;}
 .openForm > table {width: 100%; margin-top: 25px; border-top: 2px solid #333; border-bottom: 2px solid #333; color: #333; font-size: 14px;}
