--- a/bankproject/src/main/resources/static/css/index.css
+++ b/bankproject/src/main/resources/static/css/index.css
@@ -5,7 +5,7 @@
 /* 공통 */
 body {color: #333; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-sizing: border-box; scroll-behavior: smooth; overflow-x: hidden;  width: 100%; height: auto; background: #121212;}
 #wrap { width: 100%; height: 100%; }
-main {max-width: 1200px; height: 100vh; margin: 0 auto;}
+main {max-width: 1200px; height: calc(100vh-300px); margin: 0 auto;}
 
 
 
@@ -25,7 +25,7 @@ main {max-width: 1200px; height: 100vh; margin: 0 auto;}
 .main-text > a:hover {background: #fff; transition: all 0.5s; color: #333;}
 
 /* 콘텐츠 박스 */
-.news-box {width: 100%; height: 100%; margin: 0 auto; }
+.news-box {width: 100%; height: 100%; margin: 0 auto; margin-bottom: 50px; }
 .news-box > h2 {font-size: 30px; font-weight: 500; color: #ccc; padding: 50px 0;}
 .news-box > .card-con {display: grid;align-items: center; grid-template-columns: repeat(3, 1fr); gap: 100px; }
 .card-box {display: flex; flex-direction: column; height: 400px; background: #fff; border-radius: 20px; overflow: hidden;  color: #fff; box-shadow: 1px 2px 10px #333;}
