--- a/bankproject/src/main/resources/templates/account.html
+++ b/bankproject/src/main/resources/templates/account.html
@@ -9,7 +9,7 @@
    <link rel="stylesheet" th:href="@{/css/common/reset.css}">
    <link rel="stylesheet" th:href="@{/css/common/all.min.css}">
    <link rel="stylesheet" th:href="@{/css/common/fonts.css}">
-   <link rel="stylesheet" th:href="@{/css/header.css}">
+   <link rel="stylesheet" th:href="@{/css/header-footer.css}">
    <link rel="stylesheet" th:href="@{/css/account.css}">
    <!-- js -->
     <script src="/js/account.js"></script>
@@ -55,6 +55,8 @@
 				</div>
 			</div>
 		</header>
+		<!-- //header -->
+		
     </div>
 </body>
 </html>
