--- a/bankproject/src/main/resources/templates/join.html
+++ b/bankproject/src/main/resources/templates/join.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" th:href="@{/css/common/reset.css}">
    <link rel="stylesheet" th:href="@{/css/common/all.min.css}">
    <link rel="stylesheet" th:href="@{/css/common/fonts.css}">
-   <link rel="stylesheet" th:href="@{/css/header.css}">
+   <link rel="stylesheet" th:href="@{/css/header-footer.css}">
    <link rel="stylesheet" th:href="@{/css/join.css}">
    <!-- js -->
     <script src="/js/join.js"></script>
