--- a/bankproject/src/main/resources/templates/admin.html
+++ b/bankproject/src/main/resources/templates/admin.html
@@ -284,7 +284,7 @@
 
     <!-- 오른쪽 메인 콘텐츠 - 탭메뉴 형식으로 하였음. -->
     <script>
-        let randomKey = "GS1729516445668";
+        let randomKey = "";
 
         document.addEventListener('DOMContentLoaded', function () {
             const menuLinks = document.querySelectorAll('.aside-nav > li');
