--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
     <div id="login-main">
         <div class="login-box">
             <h1 class="logo"><a href="/"><img src="/img/logo_white.png" alt="패스뱅크"></a></h1>
-            <form action="/loginProc" method="post" name="loginForm" >
+            <form action="/login" method="POST" name="loginForm" >
                 <div class="idPass">
                     <input id="username" type="text" name="username" placeholder="아이디" class="id"/>
                     <input id="password" type="password" name="password" placeholder="패스워드" class="pass"/>
