--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -21,6 +21,8 @@
             <h1 class="logo"><a href="/"><img src="/img/logo_white.png" alt="패스뱅크"></a></h1>
             <form action="/login" method="POST" name="loginForm" >
                 <div class="idPass">
+                    <span th:if="${errorMsg}" class="error">[[${errorMsg}]]</span>
+                    <span th:if="${logoutMsg}" class="logoutMsg">[[${logoutMsg}]]</span>
                     <input id="username" type="text" name="username" placeholder="아이디" class="id"/>
                     <input id="password" type="password" name="password" placeholder="패스워드" class="pass"/>
                     <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
